feat(identity): remove co-owners safely
